fix timer spacing

--- a/style.css
+++ b/style.css
@@ -506,7 +506,7 @@ footer {
     font-size: 0.85em;
     position: absolute;
     right: 20px;
-    top: 100%;
+    top: 150%;
   }
 
   #copy-body {
